--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,56 +9,54 @@
     tools:context="com.baek.sam.tapaway.MainActivity">
 
     <TextView
-        android:text="High Score: "
+        android:id="@+id/scoreView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/scoreView"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="High Score: "
         android:textAlignment="center"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <RelativeLayout
+        android:id="@+id/RelativeMap"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:id="@+id/RelativeMap"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/timerView"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timerView">
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/ic_launcher"
-            android:layout_marginTop="116dp"
             android:id="@+id/moleButton"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="50dp"
-            android:onClick="clickedButton"/>
+            android:onClick="clickedButton"
+            android:scaleType="fitXY"
+            android:background="@android:color/transparent"
+            app:srcCompat="@drawable/snowflake"
+            android:layout_width="80dp"
+            android:layout_height="80dp"/>
     </RelativeLayout>
 
     <TextView
-        android:text="Time Left"
+        android:id="@+id/timerView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/timerView"
-        app:layout_constraintTop_toBottomOf="@+id/scoreView"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:text="Time Left"
         android:textAlignment="center"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scoreView"/>
 
 </android.support.constraint.ConstraintLayout>
