--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,34 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <ProgressBar
+        android:id="@+id/timeProgressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scoreView"/>
+
+    <Button
+        android:text="ready!"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/moleButton"
+        android:id="@+id/readyButton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:textSize="18sp"
+        android:onClick="clickReady"/>
+
     <RelativeLayout
         android:id="@+id/RelativeMap"
         android:layout_width="0dp"
@@ -33,30 +61,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/timerView">
+        app:layout_constraintTop_toBottomOf="@+id/timeProgressBar"
+        app:layout_constraintHorizontal_bias="0.21"
+        app:layout_constraintVertical_bias="0.28">
 
         <ImageButton
             android:id="@+id/moleButton"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@android:color/transparent"
             android:onClick="clickedButton"
             android:scaleType="fitXY"
-            android:background="@android:color/transparent"
             app:srcCompat="@drawable/snowflake"
-            android:layout_width="80dp"
-            android:layout_height="80dp"/>
-    </RelativeLayout>
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"/>
 
-    <TextView
-        android:id="@+id/timerView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Time Left"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scoreView"/>
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
