--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
+    android:background="@drawable/background2"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -48,6 +49,17 @@
         android:textSize="18sp"
         android:onClick="clickReady"/>
 
+    <TextView
+        android:text="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/currentScoreView"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:textSize="24sp"/>
+
     <RelativeLayout
         android:id="@+id/RelativeMap"
         android:layout_width="0dp"
@@ -60,8 +72,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timeProgressBar"
-        app:layout_constraintHorizontal_bias="0.21"
-        app:layout_constraintVertical_bias="0.28">
+        app:layout_constraintVertical_bias="0.43"
+        app:layout_constraintHorizontal_bias="0.46">
 
         <ImageButton
             android:id="@+id/moleButton"
@@ -74,17 +86,15 @@
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"/>
 
-    </RelativeLayout>
+        <ImageView
+            app:srcCompat="@drawable/text"
+            android:layout_below="@+id/moleButton"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="49dp"
+            android:id="@+id/imageView2"
+            android:layout_height="100dp"
+            android:layout_width="100dp" />
 
-    <TextView
-        android:text="0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/currentScoreView"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:textSize="24sp"/>
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
